Fix H2 remote connections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ server.port=${PORT:8080}
 # H2-Console: http://localhost:8080/h2-console
 
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
